--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,9 @@
 <head>
   <meta charset=utf-8 />
   <title>tottori.2574.jp</title>
-  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,minimal-ui' />
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.css' rel='stylesheet' />
   <link href='2574.css' rel='stylesheet' />
