--- a/views/2574.sass
+++ b/views/2574.sass
@@ -8,16 +8,21 @@ body
   bottom: 0
   width: 100%
 
-#locate
-  display: block
+#tool-buttons
+  width: 90%
+  margin: 0 auto
+
+.tool-button
+  display: inline-block
   position: relative
-  margin: 0px auto
-  width: 30%
-  height: 40px
-  padding: 10px
-  border: none
+  cursor: pointer
+  width: 20%
+  padding: 8px
   border-radius: 3px
+  margin-top: 10px
   font-size: 12px
   text-align: center
   color: #fff
   background: #ee8a65
+  font-family: sans-serif
+  font-weight: bold
