--- a/views/2574.sass
+++ b/views/2574.sass
@@ -20,6 +20,8 @@ body
   padding: 8px
   border-radius: 3px
   margin-top: 10px
+  margin-left: 5px
+  margin-right: 5px
   font-size: 12px
   text-align: center
   color: #fff
