Fix the style sheet

--- a/views/index.slim
+++ b/views/index.slim
@@ -14,7 +14,7 @@ html
   body
     div#map
     ul id="tool-buttons"
-      li onclick='locate();' class='tool-button' 現在地へ移動
+      li onclick='locate();' class='tool-button' 現在地
       li onclick='check();' class='tool-button' チェック
       li onclick='navi();' class='tool-button' id='navi-button' ナビ:OFF
     script src="2574.js"
