--- a/views/2574.sass
+++ b/views/2574.sass
@@ -8,20 +8,17 @@ body
   bottom: 0
   width: 100%
 
-#tool-buttons
-  width: 90%
-  margin: 0 auto
-
 .tool-button
   display: inline-block
   position: relative
   cursor: pointer
   width: 20%
   padding: 8px
-  border-radius: 3px
+  border-radius: 5px
   margin-top: 10px
   margin-left: 5px
   margin-right: 5px
+  margin-bottom: 10px
   font-size: 12px
   text-align: center
   color: #fff
