Change the order of loading of scripts

--- a/views/index.slim
+++ b/views/index.slim
@@ -6,11 +6,11 @@ html
     meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"
     meta name="viewport" content="initial-scale=1,maximum-scale=1,minimal-ui"
     title tottori.2574.jp
-    script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js"
-    link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.css" rel="stylesheet"
-    script src="ion.sound.min.js"
-    script src="//api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.0/turf.min.js"
+    link href="//api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.css" rel="stylesheet"
     link href="2574.css" rel="stylesheet"
+    script src="//api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js"
+    script src="//api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.0/turf.min.js"
+    script src="ion.sound.min.js"
   body
     div#map
     ul id="tool-buttons"
